# deep-green

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp
chess/: bishop.cpp  game.cpp  game.h  king.cpp  king.h  piece.h  queen.cpp  queen.h  rook.h
chess/piece/: knight.h  pawn.cpp  rook.cpp
src/: config.h.in  game.cpp  game.h  main.cpp
src/ai/: brain.cpp  brain.h  node.h
src/chess/: bitBoard.cpp  bitBoard.h  bitboard.cpp  bitboard.h  board.cpp  board.h  game.cpp  game.h  move.h  team.h
src/chess/piece/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
src/gui/: board.cpp  board.h  square.cpp  square.h
